crates/gitty/tests/snapshots/render__100_github-dark_style.snap
---
source: crates/gitty/tests/render.rs
expression: digest(&b)
---
 0 7:2f81f7/161b22 12:e6edf3/161b22 4:d29922/161b22 3:39c5cf/161b22 49:e6edf3/161b22 11:7d8590/161b22 2:e6edf3/161b22 11:2f81f7/161b22 1:e6edf3/161b22
 1 1:e6edf3/0d1117 7:2f81f7/0d1117 4:7d8590/0d1117 88:e6edf3/0d1117
 2 1:e6edf3/0d1117 1:d29922/0d1117 1:e6edf3/0d1117 1:2f81f7/0d1117 1:e6edf3/0d1117 20:7d8590/0d1117 61:e6edf3/0d1117 6:0d1117/2f81f7 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 3:7d8590/0d1117 1:e6edf3/0d1117
 3 1:e6edf3/142a48 1:d29922/142a48 1:e6edf3/142a48 1:2f81f7/142a48 90:e6edf3/142a48 2:f85149/142a48 1:e6edf3/142a48 2:7d8590/142a48 1:e6edf3/142a48
 4 3:e6edf3/0d1117 1:2f81f7/0d1117 69:e6edf3/0d1117 13:2f81f7/1b2c41 1:e6edf3/0d1117 6:d29922/302919 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 2:7d8590/0d1117 1:e6edf3/0d1117
 5 3:e6edf3/0d1117 1:2f81f7/0d1117 86:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 6:7d8590/0d1117 1:e6edf3/0d1117
 6 100:e6edf3/0d1117
 7 100:e6edf3/0d1117
 8 100:e6edf3/0d1117
 9 100:e6edf3/0d1117
10 100:e6edf3/0d1117
11 100:e6edf3/0d1117
12 100:e6edf3/0d1117
13 100:e6edf3/0d1117
14 100:e6edf3/0d1117
15 100:e6edf3/0d1117
16 100:e6edf3/0d1117
17 100:e6edf3/0d1117
18 100:e6edf3/0d1117
19 100:e6edf3/0d1117
20 100:e6edf3/0d1117
21 100:e6edf3/0d1117
22 100:e6edf3/0d1117
23 100:e6edf3/0d1117
24 100:e6edf3/0d1117
25 100:e6edf3/0d1117
26 100:e6edf3/0d1117
27 100:e6edf3/0d1117
28 100:e6edf3/0d1117
29 1:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 5:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 9:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 10:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 18:7d8590/161b22
