crates/gitty/tests/snapshots/render__140_github-dark_style.snap
---
source: crates/gitty/tests/render.rs
assertion_line: 200
expression: digest(&b)
---
 0 7:2f81f7/161b22 12:e6edf3/161b22 4:d29922/161b22 3:39c5cf/161b22 89:e6edf3/161b22 11:7d8590/161b22 2:e6edf3/161b22 11:2f81f7/161b22 1:e6edf3/161b22
 1 1:e6edf3/0d1117 7:2f81f7/0d1117 4:7d8590/0d1117 44:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
 2 1:e6edf3/0d1117 1:d29922/0d1117 1:e6edf3/0d1117 20:7d8590/0d1117 19:e6edf3/0d1117 6:0d1117/2f81f7 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 3:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 1:e6edf3/0d1117 2:f85149/0d1117 10:e6edf3/0d1117 3:7d8590/0d1117 7:2f81f7/0d1117 3:7d8590/0d1117 2:3fb950/0d1117 3:f85149/0d1117 5:7d8590/0d1117 47:e6edf3/0d1117
 3 1:e6edf3/142a48 1:d29922/142a48 48:e6edf3/142a48 2:f85149/142a48 1:e6edf3/142a48 2:7d8590/142a48 1:e6edf3/142a48 84:30363d/0d1117
 4 29:e6edf3/0d1117 13:58a6ff/1b2c41 1:e6edf3/0d1117 6:d29922/302919 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 2:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
 5 46:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 6:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 1:e6edf3/1e2329 1:d29922/1e2329 75:e6edf3/1e2329 2:3fb950/1e2329 1:e6edf3/1e2329 2:f85149/1e2329 1:e6edf3/1e2329
 6 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
 7 56:e6edf3/0d1117 1:30363d/0d1117 10:e6edf3/0d1117 7:7d8590/0d1117 66:e6edf3/0d1117
 8 56:e6edf3/0d1117 1:30363d/0d1117 83:7d8590/121d2f
 9 56:e6edf3/0d1117 1:30363d/0d1117 7:7d8590/0d1117 2:e6edf3/0d1117 5:ff7b72/0d1117 69:e6edf3/0d1117
10 56:e6edf3/0d1117 1:30363d/0d1117 6:56936a/173c24 1:56936a/12261e 76:e6edf3/12261e
11 56:e6edf3/0d1117 1:30363d/0d1117 6:56936a/173c24 1:56936a/12261e 76:e6edf3/12261e
12 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
13 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
14 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
15 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
16 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
17 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
18 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
19 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
20 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
21 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
22 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
23 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
24 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
25 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
26 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
27 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
28 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
29 1:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 5:2f81f7/161b22 8:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 10:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 59:7d8590/161b22
