crates/gitty/tests/snapshots/render__140_github-light_style.snap
---
source: crates/gitty/tests/render.rs
expression: digest(&b)
---
 0 7:0969da/f6f8fa 12:1f2328/f6f8fa 4:9a6700/f6f8fa 3:1b7c83/f6f8fa 89:1f2328/f6f8fa 11:656d76/f6f8fa 2:1f2328/f6f8fa 11:0969da/f6f8fa 1:1f2328/f6f8fa
 1 1:1f2328/ffffff 7:0969da/ffffff 4:656d76/ffffff 44:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
 2 1:1f2328/ffffff 1:9a6700/ffffff 1:1f2328/ffffff 20:656d76/ffffff 19:1f2328/ffffff 6:ffffff/0969da 1:1f2328/ffffff 2:cf222e/ffffff 1:1f2328/ffffff 3:656d76/ffffff 1:1f2328/ffffff 1:d0d7de/ffffff 1:1f2328/ffffff 2:cf222e/ffffff 10:1f2328/ffffff 3:656d76/ffffff 7:0969da/ffffff 3:656d76/ffffff 2:1a7f37/ffffff 3:cf222e/ffffff 5:656d76/ffffff 47:1f2328/ffffff
 3 1:1f2328/c9def7 1:9a6700/c9def7 48:1f2328/c9def7 2:cf222e/c9def7 1:1f2328/c9def7 2:656d76/c9def7 1:1f2328/c9def7 84:d0d7de/ffffff
 4 29:1f2328/ffffff 13:0969da/d3e4f8 1:1f2328/ffffff 6:9a6700/ede4d1 1:1f2328/ffffff 2:cf222e/ffffff 1:1f2328/ffffff 2:656d76/ffffff 1:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
 5 46:1f2328/ffffff 2:cf222e/ffffff 1:1f2328/ffffff 6:656d76/ffffff 1:1f2328/ffffff 1:d0d7de/ffffff 1:1f2328/ededee 1:9a6700/ededee 75:1f2328/ededee 2:1a7f37/ededee 1:1f2328/ededee 2:cf222e/ededee 1:1f2328/ededee
 6 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
 7 56:1f2328/ffffff 1:d0d7de/ffffff 10:1f2328/ffffff 7:656d76/ffffff 66:1f2328/ffffff
 8 56:1f2328/ffffff 1:d0d7de/ffffff 83:656d76/ddf4ff
 9 56:1f2328/ffffff 1:d0d7de/ffffff 7:656d76/ffffff 76:1f2328/ffffff
10 56:1f2328/ffffff 1:d0d7de/ffffff 6:407657/ccffd8 1:407657/e6ffec 76:1f2328/e6ffec
11 56:1f2328/ffffff 1:d0d7de/ffffff 6:407657/ccffd8 1:407657/e6ffec 76:1f2328/e6ffec
12 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
13 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
14 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
15 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
16 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
17 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
18 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
19 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
20 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
21 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
22 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
23 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
24 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
25 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
26 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
27 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
28 56:1f2328/ffffff 1:d0d7de/ffffff 83:1f2328/ffffff
29 1:656d76/f6f8fa 3:0969da/f6f8fa 7:656d76/f6f8fa 5:0969da/f6f8fa 8:656d76/f6f8fa 3:0969da/f6f8fa 7:656d76/f6f8fa 1:0969da/f6f8fa 8:656d76/f6f8fa 1:0969da/f6f8fa 8:656d76/f6f8fa 1:0969da/f6f8fa 10:656d76/f6f8fa 1:0969da/f6f8fa 8:656d76/f6f8fa 1:0969da/f6f8fa 7:656d76/f6f8fa 1:0969da/f6f8fa 59:656d76/f6f8fa
