crates/gitty/tests/snapshots/render__180_github-dark_style.snap
---
source: crates/gitty/tests/render.rs
expression: digest(&b)
---
 0 7:2f81f7/161b22 12:e6edf3/161b22 4:d29922/161b22 3:39c5cf/161b22 129:e6edf3/161b22 11:7d8590/161b22 2:e6edf3/161b22 11:2f81f7/161b22 1:e6edf3/161b22
 1 1:e6edf3/0d1117 7:2f81f7/0d1117 4:7d8590/0d1117 45:e6edf3/0d1117 1:30363d/0d1117 122:e6edf3/0d1117
 2 1:e6edf3/0d1117 1:d29922/0d1117 1:e6edf3/0d1117 1:2f81f7/0d1117 1:e6edf3/0d1117 20:7d8590/0d1117 18:e6edf3/0d1117 6:0d1117/2f81f7 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 3:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 1:e6edf3/0d1117 2:f85149/0d1117 10:e6edf3/0d1117 3:7d8590/0d1117 7:2f81f7/0d1117 3:7d8590/0d1117 2:3fb950/0d1117 3:f85149/0d1117 5:7d8590/0d1117 86:e6edf3/0d1117
 3 1:e6edf3/142a48 1:d29922/142a48 1:e6edf3/142a48 1:2f81f7/142a48 47:e6edf3/142a48 2:f85149/142a48 1:e6edf3/142a48 2:7d8590/142a48 1:e6edf3/142a48 123:30363d/0d1117
 4 3:e6edf3/0d1117 1:2f81f7/0d1117 26:e6edf3/0d1117 13:58a6ff/1b2c41 1:e6edf3/0d1117 6:d29922/302919 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 2:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 10:e6edf3/0d1117 7:7d8590/0d1117 68:e6edf3/0d1117
 5 3:e6edf3/0d1117 1:2f81f7/0d1117 43:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 6:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 1:e6edf3/1e2329 1:d29922/1e2329 28:e6edf3/1e2329 2:3fb950/1e2329 1:e6edf3/1e2329 2:f85149/1e2329 1:e6edf3/1e2329 1:30363d/0d1117 85:7d8590/121d2f
 6 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 7:7d8590/0d1117 2:e6edf3/0d1117 5:ff7b72/0d1117 71:e6edf3/0d1117
 7 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 6:56936a/173c24 1:56936a/12261e 78:e6edf3/12261e
 8 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 6:56936a/173c24 1:56936a/12261e 78:e6edf3/12261e
 9 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
10 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
11 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
12 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
13 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
14 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
15 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
16 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
17 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
18 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
19 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
20 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
21 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
22 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
23 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
24 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
25 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
26 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
27 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
28 57:e6edf3/0d1117 1:30363d/0d1117 36:e6edf3/0d1117 1:30363d/0d1117 85:e6edf3/0d1117
29 1:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 5:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 9:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 10:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 98:7d8590/161b22
